--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # About Section
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "Melbourne, VIC"
-resume_url: /docs/resume.docx
+resume_url: /docs/SunnyHirani_DataScientistResume.pdf
 avatar_image: /img/profile_picture.JPG
 
 #-------------------------------
