--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "Melbourne, VIC"
 resume_url: /docs/SunnyHirani_DataScientistResume.pdf
-avatar_image: /img/profile_picture.JPG
+avatar_image: /img/profile.jpg
 
 #-------------------------------
 # Contact links
